--- a/spoiler_revealer/index.html
+++ b/spoiler_revealer/index.html
@@ -14,7 +14,8 @@
 		<!--Spoiler:-->
 		<span>Luke and Leia are siblings. Ew.</span>
 	</p>
+
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/new_app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
